--- a/Home Page/style.css
+++ b/Home Page/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 body {
@@ -41,14 +42,13 @@ main {
     align-items: center;
 }
 
-.content-contaner {
+.content-container {
     display: flex;
-    text-align: center;
-    position: relative;
-    top: 50vh;
-    right: 25vh;
-    left: 25vh;
-    bottom: 50vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 70vh;
+    width: 100vw;
 }
 
 .boxes {
@@ -56,12 +56,13 @@ main {
     gap: 25px;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     margin-top: 20px;
 }
 
 .color-box {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     cursor: pointer;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
